<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_edit_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_edit_locations"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/title_edit_locations"
        android:theme="@style/Theme.Weather.Card.Ripple" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_share_weather_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/title_share_weather_forecast"
        android:theme="@style/Theme.Weather.Card.Ripple" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/title_my_locations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locations_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/location_layout" />

</LinearLayout>