<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_locations_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Theme.Weather.Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_edit_locations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/title_add_location"
        android:theme="@style/Theme.Weather.Card.Ripple" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_current_location"
        style="@style/Theme.Weather.Card.Ripple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_ripple_background"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Theme.Weather.Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:paddingVertical="12dp"
            android:text="@string/title_current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_current_location"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/title_my_locations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locations_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/location_layout" />

</LinearLayout>